# Auth-System-PRO

./: .env.example  .gitignore  CHECKLIST.md  Dockerfile  EXECUTIVO.md  INDEX.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt
alembic/: env.py
planejamento/: estrutura.md  fase.md  prioridade.md  projeto.md
scripts/: setup.sh
src/: main.py
src/api/routes/: auth.py  users.py
src/core/: config.py  dependencies.py  rate_limit.py  security.py
src/db/: session.py
src/models/: models.py
src/schemas/: schemas.py
src/services/: auth_service.py  user_service.py
tests/: conftest.py  helpers.py  test_auth.py
